# qoi

./: .gitignore  CMakeLists.txt  README.md  convert.h  main.c
CPP/: QOI.cpp  QOI.h  qoi_imp.cpp  qoi_imp.h
linux/: Makefile  main.c
win/: convert.asm
